--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#DC143C</color>
-    <color name="green">#00FF7F</color>
+    <color name="green">#7FFFD4</color>
 </resources>
