--- a/app/src/main/res/layout/activity_addtask.xml
+++ b/app/src/main/res/layout/activity_addtask.xml
@@ -28,6 +28,12 @@
         android:textSize="25sp"
         tools:ignore="RtlHardcoded" />
     </FrameLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="任务名称: "
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="30dp"/>
 
 
     <EditText
@@ -35,8 +41,7 @@
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="任务名称:"
+        android:layout_marginTop="2dp"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:padding="5dp"
@@ -50,7 +55,7 @@
             android:layout_height="50dp"
             android:background="@drawable/edit_type"
             android:layout_marginTop="20dp"
-            android:text="任务截至时间:"
+            android:text="任务截至时间: "
             android:textSize="20sp"
             android:gravity="center_vertical"
             android:padding="5dp"
@@ -67,6 +72,23 @@
             android:layout_marginStart="20sp"
             android:layout_gravity="center"/>
     </FrameLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="备注: "
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="30dp"/>
+    <EditText
+        android:id="@+id/et_remark"
+        android:layout_width="350dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="2dp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:padding="5dp"
+        android:background="@drawable/edit_type"/>
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_add"
         android:layout_width="100dp"
