--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -2,45 +2,57 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="55dp"
+    android:layout_marginTop="10sp"
     android:background="@color/white"
     android:orientation="horizontal">
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_marginStart="10dp"
-        android:layout_width="50dp"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/baseline_bookmarks_24"
-        android:layout_height="50dp"/>
-    <TextView
-        android:id="@+id/tv_taskName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/name"
-        android:textSize="20dp"
-        android:layout_marginStart="10dp"
-        android:layout_gravity="center_vertical"/>
-    <TextView
-        android:id="@+id/tv_taskTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_gravity="center_vertical"
-        android:textSize="15dp"
-        android:text="2024-5-5"/>
-    <TextView
-        android:id="@+id/tv_taskIsFinish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="是"
-        android:layout_marginStart="100dp"
-        android:textSize="20dp"
-        android:layout_gravity="center_vertical"
-        android:textColor="@color/red"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/baseline_bookmarks_24" />
+
+        <TextView
+            android:id="@+id/tv_taskName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="10dp"
+            android:text="@string/name"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/tv_taskTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="10dp"
+            android:text="2024-5-5"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/tv_taskIsFinish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="100dp"
+            android:text="是"
+            android:textColor="@color/red"
+            android:textSize="20dp" />
+    </LinearLayout>
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_delete"
         android:layout_width="55dp"
         android:layout_height="55dp"
-        android:layout_marginStart="57dp"
+        android:layout_marginStart="0dp"
         android:background="@color/red"
         android:text="删除"/>
 
