--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="55dp"
     android:layout_marginTop="10sp"
@@ -9,7 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:ignore="UselessParent">
 
         <ImageView
             android:id="@+id/imageView"
@@ -17,7 +19,8 @@
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="10dp"
-            android:src="@drawable/baseline_bookmarks_24" />
+            android:src="@drawable/baseline_bookmarks_24"
+            android:importantForAccessibility="no" />
 
         <TextView
             android:id="@+id/tv_taskName"
@@ -35,7 +38,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="10dp"
             android:text="2024-5-5"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/tv_taskIsFinish"
@@ -45,15 +48,8 @@
             android:layout_marginStart="100dp"
             android:text="是"
             android:textColor="@color/red"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
     </LinearLayout>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_delete"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="0dp"
-        android:background="@color/red"
-        android:text="删除"/>
 
 </LinearLayout>
