--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -24,7 +24,8 @@
 
         <TextView
             android:id="@+id/tv_taskName"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
+            android:gravity="center"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="10dp"
@@ -33,22 +34,20 @@
 
         <TextView
             android:id="@+id/tv_taskTime"
-            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="10dp"
             android:text="2024-5-5"
             android:textSize="15sp" />
 
-        <TextView
-            android:id="@+id/tv_taskIsFinish"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="100dp"
-            android:text="是"
-            android:textColor="@color/red"
-            android:textSize="20sp" />
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="25dp"
+            android:layout_gravity="center"/>
     </LinearLayout>
 
 
