--- a/app/src/main/res/layout/fragment_focus.xml
+++ b/app/src/main/res/layout/fragment_focus.xml
@@ -9,7 +9,7 @@
         android:id="@+id/countdownTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="倒计时："
+        android:text="请选择倒计时时间"
         android:textSize="24sp"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="24dp"/>
@@ -24,14 +24,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"/>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/pauseButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="暂停倒计时"
-        android:background="@drawable/bt_type"
-        android:layout_below="@id/startButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
+
 
 </RelativeLayout>
