--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#DC143C</color>
     <color name="green">#7FFFD4</color>
+    <color name="huisde">#808080</color>
 </resources>
